--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,17 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.5</version> <!-- check latest version for GSON -->
 		</dependency>
+
+		<dependency>
+			<groupId>com.mailgun</groupId>
+			<artifactId>mailgun-java</artifactId>
+			<version>1.0.6</version>
+		</dependency>
+		<dependency>
+			<groupId>com.mashape.unirest</groupId>
+			<artifactId>unirest-java</artifactId>
+			<version>1.4.9</version>
+		</dependency>
 	</dependencies>
 
 	<build>
