--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.5</version> <!-- check latest version for GSON -->
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
