adding jpa and mailtrap config back in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,22 @@
 #Jpa
-#spring.datasource.url=jdbc:mysql://localhost/healthpointsfitness?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
-#spring.datasource.username=root
-#spring.datasource.password=passwd
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-#spring.jpa.properties.hibernate.event.merge.entity_copy_observer=allow
-#spring.servlet.multipart.max-request-size=30MB
+spring.datasource.url=jdbc:mysql://localhost/healthpointsfitness?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
+spring.datasource.username=root
+spring.datasource.password=passwd
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.event.merge.entity_copy_observer=allow
+spring.servlet.multipart.max-request-size=30MB
 
 #GSon Config
 spring.mvc.converters.preferred-json-mapper=gson #Preferred JSON mapper to use for HTTP message conversion.
 #spring.web.resources.static-locations="/static"
 
 ##Mailtrap
-#spring.mail.host=smtp.mailtrap.io
-#spring.mail.port=2525
-#spring.mail.username=bc1f1c36937fe0
-#spring.mail.password=e2fb7afb3f714f
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
-#spring.mail.from=admin@example.com
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=bc1f1c36937fe0
+spring.mail.password=bc1f1c36937fe0
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.from=admin@example.com
