--- a/pom.xml
+++ b/pom.xml
@@ -89,20 +89,10 @@
 			<artifactId>mailgun-java</artifactId>
 			<version>1.0.6</version>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>com.mashape.unirest</groupId>-->
-<!--			<artifactId>unirest-java</artifactId>-->
-<!--			<version>1.4.9</version>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-integration</artifactId>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-webflux</artifactId>-->
-<!--		</dependency>-->
-		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>nz.net.ultraq.thymeleaf</groupId>
+			<artifactId>thymeleaf-layout-dialect</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
