changed users route for deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,7 @@ spring.mail.password=bc1f1c36937fe0
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.from=admin@example.com
+
+#Thymeleaf configs
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
