changed users route for deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,5 +25,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.from=admin@example.com
 
 #Thymeleaf configs
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
