changed recover page routes for testing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,4 +27,4 @@ spring.mail.from=admin@example.com
 #Thymeleaf configs
 #spring.thymeleaf.prefix=classpath:/templates/
 #spring.thymeleaf.suffix=.html
-spring.thymeleaf.mode=HTML5
+#spring.thymeleaf.mode=HTML
