--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,13 +16,13 @@ spring.mvc.converters.preferred-json-mapper=gson #Preferred JSON mapper to use f
 #spring.web.resources.static-locations="/static"
 
 ##Mailtrap
-spring.mail.host=smtp.mailtrap.io
-spring.mail.port=2525
-spring.mail.username=bc1f1c36937fe0
-spring.mail.password=bc1f1c36937fe0
+spring.mail.host=live.smtp.mailtrap.io
+spring.mail.port=587
+spring.mail.username=api
+spring.mail.password=502babc63bdb3d468cba4d6a6b85a9ba
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.from=admin@example.com
+spring.mail.from=admin@health-points-fitness.com
 
 #Thymeleaf configs
 #spring.thymeleaf.prefix=classpath:/templates/
