--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,9 +15,9 @@ spring.servlet.multipart.max-request-size=30MB
 spring.mvc.converters.preferred-json-mapper=gson #Preferred JSON mapper to use for HTTP message conversion.
 #spring.web.resources.static-locations="/static"
 
-##Mailtrap
+#Mailtrap
 spring.mail.host=live.smtp.mailtrap.io
-spring.mail.port=587 
+spring.mail.port=587
 spring.mail.username=api
 spring.mail.password=502babc63bdb3d468cba4d6a6b85a9ba
 spring.mail.properties.mail.smtp.auth=true
@@ -25,6 +25,10 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.from=noreply@health-points-fitness.us
 
 #Thymeleaf configs
-#spring.thymeleaf.prefix=classpath:/templates/
-#spring.thymeleaf.suffix=.html
-#spring.thymeleaf.mode=HTML
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+
+
+#DOKKU TRANSLATION
+#dokku config:set healthpointsfitness SPRING_JPA_HIBERNATE_DDLAUTO=update SPRING_JPA_SHOWSQL=true SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT=org.hibernate.dialect.MySQL8Dialect SPRING_JPA_PROPERTIES_HIBERNATE_EVENT_MERGE_ENTITY_COPY_OBSERVER=allow SPRING_SERVLET_MULTIPART_MAXREQUESTSIZE=30MB SPRING_MVC_CONVERTERS_PREFERREDJSONMAPPER=gson SPRING_MAIL_HOST=live.smtp.mailtrap.io SPRING_MAIL_PORT=587 SPRING_MAIL_USERNAME=api SPRING_MAIL_PASSWORD=502babc63bdb3d468cba4d6a6b85a9ba SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH=true SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE=true SPRING_MAIL_FROM=noreply@health-points-fitness.us SPRING_THYMELEAF_PREFIX=classpath:/templates/ SPRING_THYMELEAF_SUFFIX=.html SPRING_THYMELEAF_MODE=HTML
