added jitsi back

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.event.merge.entity_copy_observer=allow
 spring.servlet.multipart.max-request-size=30MB
+server.error.path=/error
 
 #GSon Config
 spring.mvc.converters.preferred-json-mapper=gson #Preferred JSON mapper to use for HTTP message conversion.
