--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.github.livk-cloud</groupId>
+            <artifactId>spring-auto-processor</artifactId>
+            <version>1.0.0</version>
+        </dependency>
         <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-starter-actuator</artifactId>-->
