--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,12 +9,17 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.event.merge.entity_copy_observer=allow
-spring.servlet.multipart.max-request-size=30MB
 server.error.path=/error
 
 #GSon Config
 spring.mvc.converters.preferred-json-mapper=gson #Preferred JSON mapper to use for HTTP message conversion.
 #spring.web.resources.static-locations="/static"
+
+
+#File Upload Request Max
+spring.servlet.multipart.max-request-size=30MB
+spring.servlet.multipart.max-file-size=30MB
+
 
 #Mailtrap
 spring.mail.host=live.smtp.mailtrap.io
