Fixing friend request pagination, messed up if statement

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Jpa
 spring.datasource.url=jdbc:mysql://localhost/healthpointsfitness?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.username=root
-spring.datasource.password=codeup
+spring.datasource.password=passwd
 
 
 #This and below = becomes environment variables
@@ -20,6 +20,7 @@ spring.mvc.converters.preferred-json-mapper=gson #Preferred JSON mapper to use f
 spring.servlet.multipart.max-request-size=30MB
 spring.servlet.multipart.max-file-size=30MB
 
+#dokku config:set healphointsfitness SPRING_SERVLET_MULTIPART_MAXFILESIZE=30MB
 
 #Mailtrap
 spring.mail.host=live.smtp.mailtrap.io
